@startuml
skinparam monochrome true
skinparam classAttributeIconSize 0



class ListVehiclesCheckupUI {
    + initiateCheckupListing()
    + displayVehicles(List<Vehicle>)
}

class ListVehiclesCheckupController {
    + listVehiclesNeedingCheckUp()
}

class VehicleService {
    + listVehiclesNeedingCheckUp() : List<Vehicle>
}

class Repositories {
    -Repositories()
    +getInstance()
    + getVehicleRepository()
}

class VehicleRepository {
    + getVehicles() : List<Vehicle>
}

class Vehicle {
    + calculateNextCheckup() : CheckupDetails
}


ListVehiclesCheckupUI --> ListVehiclesCheckupController 
ListVehiclesCheckupController --> VehicleService 
VehicleService --> Repositories
Repositories --> "1" VehicleRepository
VehicleRepository ..> Vehicle 
VehicleService ..> Vehicle


@enduml
